add modal-open to body

--- a/vscroll.html
+++ b/vscroll.html
@@ -346,7 +346,7 @@ $(function() {
 });
 </script>
   </head>
-  <body>
+  <body class="modal-open">
   <div id="mobile-content">
     <div id="testAndroid"></div>
     <div id="slideDoor">
