--- a/vscroll2.html
+++ b/vscroll2.html
@@ -101,6 +101,7 @@
       top: 2px;
       left: 0px;
       border: 2px solid #aaa;
+      display: none;
     }
   </style>    
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
