--- a/vscroll3.html
+++ b/vscroll3.html
@@ -187,9 +187,10 @@ $(function() {
         //console.log('toggleFlag: ', toggleFlag);    
       }
       var onTouchStart = function (e) {
+        e.preventDefault();
         //console.log("Touch Start");
         //var el = e.target ? e.target.nodeType === 3 ? e.target.parentNode : e.target : e.srcElement;
-        var point = e.touches ? e.touches[0] : e,
+        var point = e.touches ? e.touches[0] : e;
         document.getElementById("testAndroid").innerHTML = el.tagName; 
         document.getElementById("testAndroid").innerHTML += ' ';   
 
@@ -224,6 +225,8 @@ $(function() {
       };
 
       var onTouchMove = function (e) {
+        e.preventDefault();
+        var point = e.touches ? e.touches[0] : e;
         //console.log("Touch Move");
         //if (e.touches.length > 1 || !slider && !sliderX) return; // Exit if a pinch || no slider
         if ( !slider && !sliderX) return; // Exit if a pinch || no slider
@@ -274,7 +277,7 @@ $(function() {
           //sliderX.style.OTransform = 'translate(' + offsetX + 'px,0px)' + ' translateZ(0)';                     
         }
         //console.log('offsetY: '+ offsetY);
-        e.preventDefault();
+        //e.preventDefault();
         if(isScrolling) {
           resistance = slideNumber == 0         && deltaY > 0 ? (pageY / sliderHeight) + 1.25 :
                        slideNumber == lastSlide && deltaY < 0 ? (Math.abs(pageY) / sliderHeight) + 1.25 : 1;
