--- a/vscroll6.html
+++ b/vscroll6.html
@@ -359,6 +359,10 @@ $(function() {
       window.addEventListener('touchmove', onTouchMove);
       window.addEventListener('touchend', onTouchEnd);
 
+      window.addEventListener('mousedown', onTouchStart);
+      window.addEventListener('mousemove', onTouchMove);
+      window.addEventListener('mouseup', onTouchEnd);
+
     }();
 });
 </script>
