--- a/vscroll7.html
+++ b/vscroll7.html
@@ -104,7 +104,7 @@
       top: 2px;
       left: 0px;
       border: 2px solid #aaa;
-      /*display: none;*/
+      display: none;
     }
   </style>    
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
@@ -153,7 +153,8 @@ Scroll.prototype = {
   initialize: function() {
     // init event
     listenOn(window, 'touchstart', this);
-    document.getElementById("testAndroid").innerHTML = 'version: 7.1'; 
+    //document.getElementById("testAndroid").innerHTML = 'version: 7.1'; 
+    document.getElementById("title").innerHTML = 'version: 7.1'; 
   },
   destroy: function() {
 
