--- a/vscroll7.9.html
+++ b/vscroll7.9.html
@@ -12,7 +12,8 @@
       max-height: 100%;
       background-color: #ccc; 
       top: 15%;
-      bottom: 1%;          
+      bottom: 1%;
+      -webkit-transform: translate(-1282px, 0px) translateZ(0px);              
     }
     #slideDoorOpen {
       position: absolute;
@@ -166,7 +167,7 @@ Scroll.prototype = {
     // init event
     listenOn(window, 'touchstart', this);
     //document.getElementById("testAndroid").innerHTML = 'version: 7.1'; 
-    document.getElementById("title").innerHTML = 'version: 7.8'; 
+    document.getElementById("title").innerHTML = 'version: 7.9'; 
   },
   //destroy: function() {},
   getPos: function () {
